--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
 
 
-            <img src="logo.jpg" alt="the html logo">
+            
             <a href="https://www.udemy.com" target="_blank">Link tu Udemy</a>
 
             <a href="logo.jpg" target="_blank">Html Logo</a>
@@ -72,11 +72,20 @@
                 ante
                 tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus.
             </p>
+            <img src="logo.jpg" alt="the html logo">
         </div>
 
 
         <div class="other-posts">
-            duttery text
+            <div class="other">
+                The first blog post
+            </div>
+            <div class="other">
+                yet another blog post
+            </div>
+            <div class="other">
+                the best post ever
+            </div>
         </div>
         <div class="clearfix">
 
