--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
             <div class="other">
                 the best post ever
             </div>
+            <div class="other">
+                hello
+            </div>
         </div>
         <div class="clearfix">
 
@@ -95,7 +98,7 @@
             <p class="author-text">Jackson Goenlanez</p>
         </div>
     </div>
-
+    
 </body>
 
 </html>
