--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
             <div class="other">
                 hello
             </div>
+            <div class="other">
+                Contact
+            </div>
         </div>
         <div class="clearfix">
 
