--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
             <img src="author.jpg" alt="Auhtor Photo">
             <p class="author-text">Jackson Goenlanez</p>
         </div>
+        <div>
+            hello 
+        </div>
     </div>
     
 </body>
